// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modus-wc-alert should render error variant with alert icon 1`] = `
<modus-wc-alert alert-title="Custom title" variant="error">
  <!---->
  <div class="modus-wc-alert modus-wc-alert-error" role="alert">
    <modus-wc-icon class="modus-wc-flex modus-wc-items-center">
      <i aria-hidden="true" class="modus-icons modus-wc-icon modus-wc-icon--md" tabindex="-1">
        alert
      </i>
    </modus-wc-icon>
    <div>
      <modus-wc-typography>
        <!---->
        <h3 class="modus-wc-typography">
          Custom title
        </h3>
      </modus-wc-typography>
      <modus-wc-typography>
        <!---->
        <p class="modus-wc-font-normal modus-wc-text-md modus-wc-typography"></p>
      </modus-wc-typography>
    </div>
  </div>
</modus-wc-alert>
`;

exports[`modus-wc-alert should render info variant with info icon 1`] = `
<modus-wc-alert alert-title="Custom title" variant="info">
  <!---->
  <div class="modus-wc-alert modus-wc-alert-info" role="alert">
    <modus-wc-icon class="modus-wc-flex modus-wc-items-center">
      <i aria-hidden="true" class="modus-icons modus-wc-icon modus-wc-icon--md" tabindex="-1">
        info
      </i>
    </modus-wc-icon>
    <div>
      <modus-wc-typography>
        <!---->
        <h3 class="modus-wc-typography">
          Custom title
        </h3>
      </modus-wc-typography>
      <modus-wc-typography>
        <!---->
        <p class="modus-wc-font-normal modus-wc-text-md modus-wc-typography"></p>
      </modus-wc-typography>
    </div>
  </div>
</modus-wc-alert>
`;

exports[`modus-wc-alert should render success variant with check_circle icon 1`] = `
<modus-wc-alert alert-title="Custom title" variant="success">
  <!---->
  <div class="modus-wc-alert modus-wc-alert-success" role="alert">
    <modus-wc-icon class="modus-wc-flex modus-wc-items-center">
      <i aria-hidden="true" class="modus-icons modus-wc-icon modus-wc-icon--md" tabindex="-1">
        check_circle
      </i>
    </modus-wc-icon>
    <div>
      <modus-wc-typography>
        <!---->
        <h3 class="modus-wc-typography">
          Custom title
        </h3>
      </modus-wc-typography>
      <modus-wc-typography>
        <!---->
        <p class="modus-wc-font-normal modus-wc-text-md modus-wc-typography"></p>
      </modus-wc-typography>
    </div>
  </div>
</modus-wc-alert>
`;

exports[`modus-wc-alert should render warning variant with info icon 1`] = `
<modus-wc-alert alert-title="Custom title" variant="warning">
  <!---->
  <div class="modus-wc-alert modus-wc-alert-warning" role="alert">
    <modus-wc-icon class="modus-wc-flex modus-wc-items-center">
      <i aria-hidden="true" class="modus-icons modus-wc-icon modus-wc-icon--md" tabindex="-1">
        info
      </i>
    </modus-wc-icon>
    <div>
      <modus-wc-typography>
        <!---->
        <h3 class="modus-wc-typography">
          Custom title
        </h3>
      </modus-wc-typography>
      <modus-wc-typography>
        <!---->
        <p class="modus-wc-font-normal modus-wc-text-md modus-wc-typography"></p>
      </modus-wc-typography>
    </div>
  </div>
</modus-wc-alert>
`;

exports[`modus-wc-alert should render with custom props 1`] = `
<modus-wc-alert alert-description="Custom description" alert-title="Custom title" custom-class="test-class" icon="help" variant="info">
  <!---->
  <div class="modus-wc-alert modus-wc-alert-info test-class" role="alert">
    <modus-wc-icon name="help"></modus-wc-icon>
    <div>
      <modus-wc-typography variant="h3" weight="bold">
        Custom title
      </modus-wc-typography>
      <modus-wc-typography>
        Custom description
      </modus-wc-typography>
    </div>
  </div>
</modus-wc-alert>
`;

exports[`modus-wc-alert should render with default props 1`] = `
<modus-wc-alert alerttitle="Custom title">
  <!---->
  <div class="modus-wc-alert" role="alert">
    <modus-wc-icon class="modus-wc-flex modus-wc-items-center">
      <i aria-hidden="true" class="modus-icons modus-wc-icon modus-wc-icon--md" tabindex="-1">
        info
      </i>
    </modus-wc-icon>
    <div>
      <modus-wc-typography>
        <!---->
        <h3 class="modus-wc-typography"></h3>
      </modus-wc-typography>
      <modus-wc-typography>
        <!---->
        <p class="modus-wc-font-normal modus-wc-text-md modus-wc-typography"></p>
      </modus-wc-typography>
    </div>
  </div>
</modus-wc-alert>
`;
